fix: Problem now persist unsaved tags to DB if nonexistent